anotação art29 concluída

--- a/anotacao.org
+++ b/anotacao.org
@@ -42,8 +42,8 @@ Artigo 29.º \\
 
 *2.* Comparando o artigo 16.º da Proposta e o artigo 29.º do RSD, este último introduz /(i)/ um período de transição de 12 meses nos casos em que o fornecedor de plataforma em linha perca o estatuto de micro ou pequena empresa e /(ii)/ um recorte da exclusão subjetiva esclarecendo que as disposições adicionais aplicáveis aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes são sempre aplicáveis quando se trate de plataformas em linha de muito grande dimensão.
 
-*3.* O recorte da exclusão subjetiva foi introduzido pelo Parlamento Europeu e pelo Conselho[fn:1]. O período de transição surge mais tarde no processo legislativo, na sequência de negociações interinstitucionais entre o Parlamento Europeu, o Conselho e a Comissão Europeia[fn:2]. No final do processo legislativo, dividiu-se a secção 3 da Proposta (que inicia no artigo 16.º) nas atuais secção 3, relativa às disposições adicionais aplicáveis aos fornecedores de plataformas em linha (arts. 19.º a 28.º do RSD) e secção 4, relativa às disposições adicionais aplicáveis aos fornecedores de plataformas em linha que permitem aos consumidores celebrar
-contratos à distância com comerciantes (arts. 29.º a 32.º do RSD). Tal motivou uma retificação da posição adotada em primeira leitura pelo Parlamento Europeu em 5 de julho de 2022, na qual se inseriu o atual artigo 29.º do RSD[fn:3].
+*3.* O recorte da exclusão subjetiva foi introduzido pelo Parlamento Europeu e pelo Conselho[fn:1]. O período de transição surge mais tarde no processo legislativo, na sequência de negociações interinstitucionais entre o Parlamento Europeu, o Conselho e a Comissão Europeia[fn:2]. No final do processo legislativo, dividiu-se a secção 3 da Proposta (que inicia no artigo 16.º) nas atuais secção 3, relativa às disposições adicionais aplicáveis aos fornecedores de plataformas em linha (artigos 19.º a 28.º do RSD) e secção 4, relativa às disposições adicionais aplicáveis aos fornecedores de plataformas em linha que permitem aos consumidores celebrar
+contratos à distância com comerciantes (artigos 29.º a 32.º do RSD). Tal motivou uma retificação da posição adotada em primeira leitura pelo Parlamento Europeu em 5 de julho de 2022, na qual se inseriu o atual artigo 29.º do RSD[fn:3].
 
 *** II - Ponderação de interesses
 
@@ -54,22 +54,23 @@ contratos à distância com comerciantes (arts. 29.º a 32.º do RSD). Tal motiv
 *** III - Interpretação da norma
 *6. Conceitos.* Os conceitos mais relevantes do artigo 29.º são, por um lado, os conceitos de "consumidor", "comerciante", "plataforma em linha", "contrato à distância" e "plataforma em linha de muito grande dimensão" definidos, respetivamente, nos artigos 3.º, e 33.º, n.ºs 1 e 4, para os quais se remete e, por outro, os conceitos de micro e pequena empresa, definidos na Recomendação 2003/361/CE[fn:7].
 
-*7.* Estes conceitos efetuam o recorte subjetivo de quem está sujeito às disposições adicionais consagradas na secção IV do capítulo III e de quem beneficia da exclusão prevista no artigo 29.º. Assim, e por exemplo, o fornecedor de plataforma em linha que /ou/ não permita a celebração de contratos à distância /ou/ só permita a celebração de contratos à distância entre comerciantes não está obrigado a cumprir as disposições adicionais consagradas na secção IV do capítulo III. Por outro lado, o fornecedor de plataforma em linha que permita a celebração de contratos à distância com consumidores /e/ que seja considerado uma micro ou pequena empresa na aceção da Recomendaçã 2003/361/CE beneficia da exclusão consagrada no artigo 29.º, n.º 1, /exceto se/ a sua plataforma em linha for designada como uma plataforma de muito grande dimensão (artigo 29.º, n.º 2).
+*7.* Estes conceitos efetuam o recorte subjetivo de quem está sujeito às disposições adicionais consagradas na secção IV do capítulo III e de quem beneficia da exclusão prevista no artigo 29.º. Assim, e por exemplo, o fornecedor de plataforma em linha que /ou/ não permita a celebração de contratos à distância /ou/ só permita a celebração de contratos à distância entre comerciantes não está obrigado a cumprir as disposições adicionais consagradas na secção IV do capítulo III. Por outro lado, o fornecedor de plataforma em linha que permita a celebração de contratos à distância com consumidores /e/ que seja considerado uma micro ou pequena empresa na aceção da Recomendação 2003/361/CE beneficia da exclusão consagrada no artigo 29.º, n.º 1, /exceto se/ a sua plataforma em linha for designada como uma plataforma de muito grande dimensão (artigo 29.º, n.º 2).
 
 *8. Conceitos de micro e pequena empresa.* O conceito de empresa abrange "qualquer entidade que, independentemente da sua forma jurídica, exerce uma actividade econó-
 mica."[fn:10] Uma micro empresa "é definida como uma empresa que emprega menos de 10 pessoas e cujo volume de negócios anual ou balanço total anual não excede 2 milhões de euros."[fn:8] Uma pequena empresa "é definida como uma empresa que emprega menos de 50 pessoas e cujo volume de negócios anual ou balanço total anual não excede 10 milhões de euros."[fn:9] Atende-se também às relações entre empresas para efeitos de apuramento destes critérios, classificando as empresas como autónomas, parceiras ou associadas[fn:11] e esclarecendo que uma empresa não pode ser considerada uma pequena ou média empresa "se 25% ou mais do seu capital ou dos seus direitos de voto forem controlados, directa ou indirectamente, por uma ou várias colectividades públicas ou organismos públicos, a título individual ou conjuntamente."[fn:12] A Recomendação estabelece ainda os dados a considerar para cálculo dos efetivos e dos montantes financeiros[fn:13].
 
 De acordo com o TJUE, o conceito de micro, pequenas e médias empresas (PME) da Recomendação 2003/361/CE deve ser objeto de interpretação estrita, pois as vantagens concedidas às PME constituem, muitas vezes, exceções às regras gerais[fn:14][cite:@hofmann2023;art. 29.º, n.º 7, defendem que a interpretação não deve ser estrita, mas sim tendo em conta a sua função específica].
 
-*10. Não aplicabilidade das disposições da presente secção*. Beneficiam da não aplicabilidade desta secção todos os fornecedores de plataformas em linha que permitam a celebração de contratos à distância com consumidores que sejam, na aceção da Recomendação 2003/361/CE, uma micro ou uma pequena empresa (art. 29.º, n.º 1, 1.º parágrafo do RSD). Como a exclusão abrange as micro e as pequenas empresas, bastará cumprir os critérios definidos na recomendação para estas últimas para beneficiar da exclusão.[cite:Cf., no mesmo sentido, @hofmann2023;art. 29.º, n.º 10]
+*10. Não aplicabilidade das disposições da presente secção*. Beneficiam da não aplicabilidade desta secção todos os fornecedores de plataformas em linha que permitam a celebração de contratos à distância com consumidores que sejam, na aceção da Recomendação 2003/361/CE, uma micro ou uma pequena empresa (artigo 29.º, n.º 1, 1.º parágrafo do RSD). Como a exclusão abrange as micro e as pequenas empresas, bastará cumprir os critérios definidos na recomendação para estas últimas para beneficiar da exclusão.[cite:Cf., no mesmo sentido, @hofmann2023;art. 29.º, n.º 10]
 
-Sendo a exclusão um benefício concedido aos os fornecedores de plataformas em linha que permitam a celebração de contratos à distância com consumidores que sejam, na aceção da Recomendação 2003/361/CE, uma micro ou uma pequena empresa, nada impede que estes voluntariamente cumpram o disposto nesta secção[cite:Cf., no mesmo sentido, @muller-terpitz2023;art. 29.º, n.º 6].
+Sendo a exclusão um benefício concedido aos os fornecedores de plataformas em linha que permitam a celebração de contratos à distância com consumidores que sejam, na aceção da Recomendação 2003/361/CE, uma micro ou uma pequena empresa, nada impede que estes voluntariamente cumpram uma ou mais das obrigações previstas nesta secção[cite:Cf., considerando n.º 57 do RSD e @muller-terpitz2023;art. 29.º, n.º 6].
 
-*11. Perda de estatuto de micro ou pequena empresa*. Caso o fornecedor deixe de preencher os critérios para ser considerado, pelo menos, uma pequena empresa na aceção da Recomendação 2003/361/CE, ele beneficia de um período de 12 meses contados a partir da data em que perdeu o estatuto de micro ou pequena empresa (art. 29.º, n.º 1, 2.º parágrafo). Uma empresa perde o estatuto de micro ou pequena empresa se, numa base anual, superar o limiar de efetivos e ou os limiares financeiros /e/ se tal se repetir durante dois exercícios consecutivos[fn:15]. Perdido o estatuto de micro ou pequena empresa, o fornecedor só terá a obrigação de cumprir com as normas da presente secção passados 12 meses. Este período de transição compreende-se como força de mitigar os encargos inerentes ao cumprimento das obrigações desta secção.
+*11. Perda de estatuto de micro ou pequena empresa*. Caso o fornecedor deixe de preencher os critérios para ser considerado, pelo menos, uma pequena empresa na aceção da Recomendação 2003/361/CE, ele beneficia de um período de 12 meses contados a partir da data em que perdeu o estatuto de micro ou pequena empresa (artigo 29.º, n.º 1, 2.º parágrafo). Uma empresa perde o estatuto de micro ou pequena empresa se, numa base anual, superar o limiar de efetivos e ou os limiares financeiros /e/ se tal se repetir durante dois exercícios consecutivos[fn:15]. Perdido o estatuto de micro ou pequena empresa, o fornecedor só terá a obrigação de cumprir com as normas da presente secção passados 12 meses. Este período de transição compreende-se como força de mitigar os encargos inerentes ao cumprimento das obrigações desta secção.
 
-*12. Fornecedores de plataformas em linha de muito grande dimensão*. Os fornecedores de plataformas em linha que permitam a celebração de contratos à distância que tenham sido designadas como plataformas em linha de muito grande dimensão (cf. artigo 33.º e ss.) não beneficiam da exclusão (art. 29.º, n.º 2, do RSD) nem do período de transição em caso de perda do estatuto de micro ou pequena empresa (art. 29.º, n.º 1, 2.º parágrafo, /in fine/, do RSD).
+*12. Fornecedores de plataformas em linha de muito grande dimensão*. Os fornecedores de plataformas em linha que permitam a celebração de contratos à distância que tenham sido designadas como plataformas em linha de muito grande dimensão (cf. artigo 33.º e ss.) não beneficiam da exclusão (artigo 29.º, n.º 2, do RSD) nem do período de transição em caso de perda do estatuto de micro ou pequena empresa (artigo 29.º, n.º 1, 2.º parágrafo, /in fine/, do RSD). Considerando o maior alcance e impacto das plataformas em linha de muito grande dimensão (que têm um número médio mensal de destinatários activos do serviços na União Europeia igual ou superior a 45 milhões), o legislador considerou que o valor da proteção dos consumidores deve prevalecer sobre o apoio às micro e pequenas empresas, razão pela qual mesmo que o fornecedor da plataforma em linha de muito grande dimensão seja uma micro ou pequena empresa, na aceção da Recomendação 2003/361/CE, ele encontra-se obrigado ao cumprimento das disposições da presente secção.
 
-*** IV - Apreciação global
+Caso o fornecedor seja uma micro ou pequena empresa, na aceção da Recomendação 2003/361/CE, e a sua plataforma em linha que permite a celebração de contratos à distância seja designada pela Comissão Europeia como uma plataforma em linha de muito grande dimensão pode questionar-se a partir de que data devem ser cumpridas as disposições previstas nos artigos 30.º a 32.º do RSD. Resulta do artigo 33.º, n.º 6, 2.º parágrafo, do RSD que as obrigações adicionais dos fornecedores de plataformas em linha de muito grande dimensão e de motores de pesquisa em linha de muito grande dimensão no que se refere à gestão de riscos sistémicos (secção 5 do capítulo III) são aplicáveis no prazo de quatro meses após a notificação da designação ao fornecedor. Nada se prevê, porém, quanto à data em que são aplicáveis as disposições adicionais aplicáveis aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes (secção 4 do capítulo III). Parecem possíveis duas interpretações: a primeira, mais literal, é a de que as disposições da presente secção são aplicáveis a partir da data da notificação ao fornecedor da designação da sua plataforma como uma plataforma em linha de muito grande dimensão; a segunda é a de que as disposições da presente secção são aplicáveis 4 meses após a notificação ao fornecedor da designação da plataforma como plataforma em linha de muito grande dimensão, aplicando analogicamente o prazo previsto no artigo 33.º, n.º 6, 2.º parágrafo do RSD. Parece-nos que esta segunda opção é mais consentânea com a ponderação de interesses subjacente a esta secção. Considerando o teor das obrigações previstas nos artigos 30.º a 32.º do RSD, a caracterização do fornecedor como micro ou pequena empresa na aceção da Recomendação 2003/361/CE e a classificação como plataforma em linha de muito grande dimensão depender de uma decisão da Comissão Europeia, parece adequado o prazo de quatro meses para o fornecedor assegurar o cumprimento das obrigações previstas na presente secção.
+
 * Anotação artigo 30.º
 ** Transcrição do artigo
 ** Bibliografia
@@ -106,6 +107,7 @@ Sendo a exclusão um benefício concedido aos os fornecedores de plataformas em 
 [fn:6] Cf. artigo 22.º do Regulamento (UE) 2023/988 do Parlamento Europeu e do Conselho de 10 de maio de 2023 relativo à segurança geral dos produtos, que altera o Regulamento (UE) n.o 1025/2012 do Parlamento Europeu e do Conselho e a Diretiva (UE) 2020/1828 do Parlamento Europeu e do Conselho e que revoga a Diretiva 2001/95/CE do Parlamento Europeu e do Conselho e a Diretiva 87/357/CEE do Conselho, publicado no JO L 135, de 23 de maio de 2023.
 
 [fn:5] Cf., neste sentido, Parecer do Comité Económico e Social Europeu sobre a «Proposta de regulamento do Parlamento Europeu e do Conselho relativo a um mercado único de serviços digitais (Regulamento Serviços Digitais) e que altera a Diretiva 2000/31/CE», publicado no JO C 286, de 16 de julho de 2021, ponto 3.7.
+
 [fn:4] Cf. considerando n.º 57.
 
 [fn:3] cf. RETIFICAÇÃO da posição do Parlamento Europeu aprovada em primeira leitura, em 5 de julho de 2022, tendo em vista a adoção do Regulamento (UE) 2022/... do Parlamento Europeu e do Conselho relativo a um mercado único de serviços digitais (Regulamento Serviços Digitais) e que altera a Diretiva 2000/31/CE, doc. P9_TA(2022)0269 de 8 de setembro de 2022 (COM(2020)0825 – C9-0418/2020 – 2020/0361(COD)), disponível em https://www.europarl.europa.eu/doceo/document/TA-9-2022-0269_PT.html e consultada pela última vez em 20 de fevereiro de 2025.
